# raw_eth_pktgen

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  app.h  b_ench_send_arrsum.cpp  batch_fetch  bench_recv_arrsum.c  bench_recv_arrsum.cpp  bench_send_arrsum.c  bench_send_arrsum.cpp  cache.c  cache.h  common.c  common.h  cpp_comp_fetch.cpp  cpp_naive_local  cpp_naive_local.cpp  cycles.h  gen_latency_recv  gen_latency_send  gen_latency_send.c  gen_recv  gen_recv.c  gen_send  gen_send.c  gen_simple_recv  gen_simple_recv.c  gen_simple_send  gen_simple_send.c  greeting.h  net.c  packet.h  patt  patterns.h  patterns.hpp  patterns_test.cpp  remoteKVS.hpp  remote_train.time  (+5 more)
429.mcf/: cmpp.sh  mcf.hprof.0001.heap  module_mapping_attr.mlir
429.mcf.origin/: mcf.hprof.0002.heap  train_input.time
429.mcf.origin/src/: Makefile  implicit.c  (+15 more)
AIFM_COMP/: ary_sum.cpp  ary_sum_cache.sh  ary_sum_local  ary_sum_local.cpp  ary_sum_remote  ary_sum_remote.cpp
AIFM_COMP_pf/: local  local.cpp  pre_remote  pre_remote.cpp
AIFM_COMP_rand/: rand_cache.sh  rand_local.cpp
AIFM_COMP_seq/: ary_sum_local.cpp  cache_remote.cpp
AIFM_COMP_tile/: cache_remote  cache_remote.cpp  keepC_local  keepC_local.cpp  tile_local  tile_local.cpp
apps/ary_seq_opts/: CMakeLists.txt  async_fetch.cpp  batch_fetch.cpp  comp_fetch.cpp  general_recv.cpp  naive_local.cpp  pre_fetch.cpp
apps/bench-fusion-ring-cache/: CMakeLists.txt  channel_best.cc  channel_best_new.cc  new-rt-fused-opt.cc  new-rt-fused.cc  no_fuse.cc  ref-fused.cc  ref.cc  rvec.h  workload.hpp
apps/bench-gemm/: CMakeLists.txt  ref-ring-direct.c  ref-ring.c  ref.c  slow.c  with-mlir.c
apps/bench-interleave/: CMakeLists.txt  cache1.cc  cache2.cc  cache_ring.cc  new.cc  new_1c.cc  new_1c_lat.cc  new_1c_partition.cc  new_2c_batch.cc  new_2c_lat.cc  new_2c_npref.cc  new_2c_opt.cc  new_2c_set.cc  new_2c_unopt.cc  ref.cc  workload.hpp
apps/bench-interleave-mlir/: CMakeLists.txt  remote.cc  visit_local.c
apps/bench-matmul-mt/: CMakeLists.txt  a  dummy  dummy.ll  dummy.llvm.mlir  mlir_dummy.c  mm-old-mt-test.cc  mm-old-mt.cc  mm-shared-mt.cc  mt-mlir.cc  mt_gen.py
apps/bench-mt-mlir/: CMakeLists.txt  mlir_dummy.c  remote.cc
apps/break-new-mcf/: .gitignore  CMakeLists.txt  cache_init.hpp  implicit.cc  implicit.h  mcf.cc  mcf.h  output.cc  pbeampp.cc  pbeampp.h  psimplex.cc  readmin.cc  treeup.cc
apps/cache_Rstem/: CMakeLists.txt  cache_test.cpp  local_multi_cache.cpp  local_multi_cache_nopref.cpp  norm-var.sh  remote_pool_test.cpp  remote_test  remote_test.cpp  tile_lineS.sh
apps/cache_Rstem/norm_var_log/: log.2  log.32
apps/cache_Rstem/seq_lineS_log/: log.1024  log.512
apps/cache_Rstem/uni-lineS_log/: log.256
apps/examples/: CMakeLists.txt  cache_array.c  cache_test_local.cpp  cache_test_remote.cpp  gen_cache_local.cpp  gen_cache_remote.cpp  gen_latency_recv.c  gen_latency_send.c  gen_recv.c  gen_simple_recv.c  gen_simple_send.c
apps/from-old-mcf/: CMakeLists.txt  cache_init.hpp  callgraph.txt  defines.h  implicit.cc  mcf.cc  mcfutil.cc  output.cc  pbeampp.cc  psimplex.cc  pstart.cc  readmin.cc  treeup.cc
apps/graph_alg/: CMakeLists.txt  L  M  SSSP.c  SSSP_L.cpp  SSSP_M.cpp  SSSP_local.c  SSSP_local.cpp  SSSP_local_naive_acq.cpp  SSSP_local_naive_acq_1c.cpp  SSSP_local_old.c  SSSP_local_pf.c  SSSP_local_pref.cpp  SSSP_local_test.c  SSSP_local_test.cpp  SSSP_remote.c  SSSP_remote.cpp  monitor.sh  path_M.txt  sssp.c  util.h  util.hpp  util_disagg.h  util_disagg_1c.h  util_disagg_2c.h  util_disagg_aifm.hpp  util_disagg_aifm_1c.hpp  util_disagg_aifm_naive.hpp  util_disagg_naive_acq.hpp  util_disagg_naive_acq_1c.hpp  util_disagg_naive_rtc.hpp  util_disagg_old.h  util_disagg_pref.hpp
apps/graph_alg/data/: CA_ROAD.txt
apps/graph_alg/exp/: naive-2c-4-16-8-8.txt  naive_acq.txt  naive_rtc.txt  pref-4-16-8-8.txt
apps/mcf/: CMakeLists.txt  Makefile  implicit.c  internal_opts.c  mcf  mcf.c  mcf.h  mcf_test.c  mcfutil.c  output.c  pbeampp.c  psimplex.c  pstart.c  readmin.c  test  treeup.c
ary_seq_opts/: async_fetch.cpp  batch_fetch.cpp  comp_fetch.cpp  general_recv.cpp  naive_local.cpp  pre_fetch.cpp
bench/: bench_recv_arrsum.c  bench_send_arrsum.c
bench_arrsum/: batch_latency.sh  bench_recv_arrsum  bench_recv_arrsum.cpp  bench_send_arrsum  bench_send_arrsum.cpp  log.10  log.11  log.12  log.2  log.3  log.4  log.5  log.6  log.7  log.8  log.9  pre_stride_latency.sh  test.sh
cache_Rstem/: cache_test  cache_test.cpp  remote_test.cpp  seq-lineS.sh  uni-lineS.sh
cache_opts/: ary_seq  ary_seq.cpp  byte_cache.hpp  byte_cache_test.cpp  cache_test  cache_test.cpp  dm_cache.hpp  norm-var.sh  receiver  receiver.cpp  remoteKVS.hpp  remote_test  remote_test.cpp  rw.cpp  seq-lineS.sh  tile_lineS.sh  uni-lineS.sh
clang-passes/: CMakeLists.txt  LoopConvert.cpp  test.cpp
configs/: cache.cfg
cpp_array_seq/: comp_fetch_local.cpp  naive_local.cpp
cpt_net/: local.cpp  pre_remote.cpp
dataframe-original/: CMakeLists.txt
disaggcc/: CMakeLists.txt
examples/: gen_latency_recv.c  gen_recv.c
from_mlir/: .gitignore
include/: cache.h  common.h  cycles.h  greeting.h  vec.hpp
lib/: CMakeLists.txt  cache.c  common.c  common_shm.c
libcommon/: CMakeLists.txt
libcommon/lib/: CMakeLists.txt  ambassador.c  cache.c  cache.cc  common.c  mem_block.c  mem_slicer.c  net.c  offload.c  offloads.c  prefetcher.c  rdmaop.cc  remote_pool.c  replacement.c  robj.c  side_channel.c
libcommon/lib/apps/: remote_server.c
libcommon/lib/apps/fromMLIR/: foo.c
libcommon/lib/apps/offload/: step1_unique.cpp  sum.cpp  unique.cpp
libcommon/lib/apps/offloads/: foo.c
libcommon/lib/include/: ambassador.h  cache_internal.h  cache_policy.h  channel_internal.h  exchanger.h  local_mr.h  mem_block.h  mem_slicer.h  rbuf_interface.h  replacement.h  stack_like.h  stats_internal.h
original/: CMakeLists.txt
rbin/: remote_server
scripts/: loop-around-comps.sh  matmul.sh  monitor.sh  run_df.sh  shm_cache_rand.sh  util.sh  wuk_rdma_lat.sh
spec2006-bzip2/: CMakeLists.txt  compressor_local.cpp  compressor_recv_kvs.cpp  compressor_recv_norm.cpp  compressor_send.cpp
(+759 files in other folders)
