link_libraries(common)

add_executable(interlf-ref ref.cc)
add_executable(interlf-cache1 cache1.cc)
add_executable(interlf-cache2 cache2.cc)
add_executable(interlf-new1c new_1c.cc)
add_executable(interlf-1c-partition new_1c_partition.cc)
add_executable(interlf-new2c-npref new_2c_npref.cc)
add_executable(interlf-new2c-opt new_2c_opt.cc)
add_executable(interlf-new2c-set new_2c_set.cc)
add_executable(interlf-new2c-lat new_2c_lat.cc)
add_executable(interlf-new1c-lat new_1c_lat.cc)
